# user-service/src/main/java/jp/keio/acds/userservice/api/StoresApiController.java
@@ -2,6 +2,7 @@ package jp.keio.acds.userservice.api;
 
 import com.scalar.db.exception.transaction.TransactionException;
 import jp.keio.acds.userservice.dto.Store;
+import jp.keio.acds.userservice.dto.StoreCreate;
 import jp.keio.acds.userservice.service.StoreService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -14,6 +15,7 @@ import javax.annotation.Generated;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
 
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-07-21T00:21:06.629+09:00[Asia/Tokyo]")
 @Controller
@@ -35,9 +37,27 @@ public class StoresApiController implements StoresApi {
     }
 
     @Override
+    public ResponseEntity<Store> getStore(UUID storeId) {
+        try {
+            return new ResponseEntity(storeService.get(storeId), HttpStatus.OK);
+        } catch (TransactionException e) {
+            return new ResponseEntity(HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+    }
+
+    @Override
     public ResponseEntity<List<Store>> listStores() {
         try {
             return new ResponseEntity(Arrays.asList(storeService.list()), HttpStatus.OK);
+        } catch (TransactionException e) {
+            return new ResponseEntity(HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+    }
+
+    @Override
+    public ResponseEntity<Store> createStore(StoreCreate body) {
+        try {
+            return new ResponseEntity(storeService.create(body), HttpStatus.OK);
         } catch (TransactionException e) {
             return new ResponseEntity(HttpStatus.INTERNAL_SERVER_ERROR);
         }
